// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tab > should support rendering an icon in different positions around the children 1`] = `
<button
  aria-selected="false"
  class="rmd-tab rmd-interaction-surface"
  id="tab-:r0:"
  role="tab"
  tabindex="-1"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </span>
  <span>
    Tab
  </span>
</button>
`;

exports[`Tab > should support rendering an icon in different positions around the children 2`] = `
<button
  aria-selected="false"
  class="rmd-tab rmd-tab--stacked rmd-interaction-surface"
  id="tab-:r0:"
  role="tab"
  tabindex="-1"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </span>
  <span>
    Tab
  </span>
</button>
`;

exports[`Tab > should support rendering an icon in different positions around the children 3`] = `
<button
  aria-selected="false"
  class="rmd-tab rmd-tab--reversed rmd-interaction-surface"
  id="tab-:r0:"
  role="tab"
  tabindex="-1"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </span>
  <span>
    Tab
  </span>
</button>
`;

exports[`Tab > should support rendering an icon in different positions around the children 4`] = `
<button
  aria-selected="false"
  class="rmd-tab rmd-tab--stacked rmd-tab--stacked-reversed rmd-interaction-surface"
  id="tab-:r0:"
  role="tab"
  tabindex="-1"
  type="button"
>
  <span
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
  >
    favorite
  </span>
  <span>
    Tab
  </span>
</button>
`;
